--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "animate.css": "^4.1.1",
     "canvas-confetti": "^1.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.0",
-    "@angular/cli": "~13.2.0",
+    "@angular-devkit/build-angular": "^16.2.1",
+    "@angular/cli": "^16.2.1",
     "@angular/compiler-cli": "~13.2.0",
     "@types/canvas-confetti": "^1.6.0",
     "@types/jasmine": "~3.10.0",
